# piperine

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  IDE_GAPS.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile.toml  PHASE_0_ADAPTIVE_TIMESTEP.md  Plugin plan.md  README.md  ROADMAP.md  ROADMAP_REFINEMENT.md  SIMPLIFICATION.md  SOLVER_GAPS.md  SPEC_BENCH_GAPS.md  add_comb.py  agents.md  build.rs  dcop.cir  dump.txt  errors.json  fix_again.py  fix_as_analog.py  fix_b3.py  fix_b4.py  fix_mixed_tests.py  fix_tests.py  fix_tests2.py  gen_spice_components.py  mkdocs-spec.yml  mkdocs.yml  refactor_to_ir.py  split.py  tests-baseline.md  update_components.py  vams.md
crates/piperine-api/: Cargo.toml
crates/piperine-api/src/: analysis.rs  circuit.rs  engine.rs  error.rs  fourier.rs  hooks.rs  lib.rs  node.rs  num.rs  options.rs  prelude.rs  result.rs  results.rs  session.rs  spice.rs  subcircuit.rs  units.rs  waveform.rs
crates/piperine-api/tests/: smoke.rs  temp_sweep.rs
crates/piperine-cli/: Cargo.toml  build.rs
crates/piperine-cli/docs/: CLI_TOOLS.md  IDEAS.md
crates/piperine-cli/src/: lib.rs  main.rs
crates/piperine-cli/templates/: main.phdl  main.vams
crates/piperine-cli/tests/: cli_check.rs  cli_check_tests.rs  run_examples.rs  run_examples_test.rs  test_tb.rs
crates/piperine-codegen/: Cargo.toml  IR-SYSTEM.md
crates/piperine-codegen/docs/: DIGITAL_JIT.md  SPEC.md
crates/piperine-codegen/src/: display.rs  error.rs  from_ams.rs  from_elab.rs  from_ir.rs  from_ppr.rs  ir.rs  ir_analog_to_device.rs  ir_digital_to_interp.rs  lib.rs  phdl_device.rs
crates/piperine-codegen/tests/: ams_ir_e2e_tests.rs  ams_ir_test.rs  analog_jit.rs  analog_jit_tests.rs  codegen_api.rs  codegen_api_tests.rs  codegen_e2e_tests.rs  codegen_ir.rs  digital_fusion.rs  digital_jit.rs  digital_jit_tests.rs  disto_jit.rs  from_ir.rs  from_ir_tests.rs  ir_analog_to_device_tests.rs  ir_digital_to_interp_tests.rs  limiters.rs  live_params.rs  live_set_never_recompiles.rs  part_a_silent_bugs_tests.rs  ppr_ir.rs  ppr_ir_test.rs  silent_bugs.rs  sim_query_tests.rs  table_op.rs  wave1_nonlinear_tests.rs  wave2_reactive_tests.rs
crates/piperine-interpreter/: Cargo.toml
crates/piperine-interpreter/src/: backend.rs  dataframe.rs  error.rs  extern_types.rs  interpreter.rs  lib.rs  plugin.rs  std_types.rs  stdlib.rs  task.rs  value.rs
crates/piperine-lang/: Cargo.toml
crates/piperine-lang-server/: Cargo.toml
crates/piperine-lang-server/src/: dispatch.rs  lib.rs  main.rs  project.rs  server.rs  state.rs  symbol_index.rs  text_pos.rs
crates/piperine-lang-server/tests/: integration_test.rs
crates/piperine-lang/docs/: 01-pipeline-overview.md  02-lexer-parser.md  03-ast.md  04-elaboration.md  05-const-eval.md  06-event-system.md  07-pom.md  08-lowering-to-ir.md  09-runtime.md  10-monomorphization.md  ERRORS.md  SPEC.md  SPEC_BENCH.md
crates/piperine-lang/examples/: bench_digital.rs  debug_ast.rs
crates/piperine-lang/headers/: constants.phdl  device_port.phdl  disciplines.phdl  math.phdl  ngspice.phdl  operators.phdl  prelude.phdl  tasks.phdl  types.phdl
crates/piperine-lang/src/: circuit.rs  lib.rs  resolve.rs  source_map.rs  value.rs
crates/piperine-lang/tests/: b3_tests.rs  b5_tests.rs  bench.rs  bench_removed.rs  bundle_connections.rs  bundle_param.rs  bundle_param_tests.rs  callable_registry.rs  cast_impl_methods.rs  codegen_api.rs  codegen_api_tests.rs  codegen_ir.rs  codegen_tests.rs  elab.rs  elaboration_tests.rs  extern_coverage_guard.rs  extern_grammar.rs  extern_missing_native_binding.rs  extern_type_registry.rs  fail_loud_call_resolution.rs  fail_loud_type_attr_resolution.rs  from_ir.rs  from_ir_tests.rs  integration_tests.rs  ngspice_ir.rs  ngspice_ir_tests.rs  ngspice_parse.rs  ngspice_parse_tests.rs  noise_current_psd_tests.rs  operator_and_impl_method_registries.rs  operator_resolution.rs  overload_resolution.rs  parse_elab.rs  part_a_silent_bugs_tests.rs  part_c_prelude_tests.rs  pom_aux_tests.rs  pom_serde.rs  pom_staging_tests.rs  ppr_ir.rs  ppr_ir_test.rs  (+11 more)
crates/piperine-ngspice/: Cargo.toml  build.rs
crates/piperine-ngspice/ppr/: ngspice.ppr
crates/piperine-ngspice/src/: backend.rs  callbacks.rs  expr_serializer.rs  ffi.rs  hardware.rs  instance.rs  lib.rs  protocol.rs  tasks.rs  worker.rs
crates/piperine-openvaf/: Cargo.toml  build.rs
crates/piperine-openvaf/src/: cache.rs  compiler.rs  lib.rs  osdi_hardware.rs
crates/piperine-plugin/: Cargo.toml
crates/piperine-plugin-fixture/: Cargo.toml
crates/piperine-plugin-fixture/src/: lib.rs
crates/piperine-plugin-wasm/: Cargo.toml
crates/piperine-plugin-wasm/examples/: wasm_parasitics.rs
crates/piperine-plugin-wasm/src/: lib.rs
crates/piperine-plugin/examples/: fixture_plugin.rs  fixture_schema_plugin.rs  process_parasitics.rs
crates/piperine-plugin/src/: capability.rs  contributions.rs  error.rs  host.rs  lib.rs  manifest.rs  trust.rs  view.rs
crates/piperine-plugin/tests/: e2e.rs  extern_stub.rs  manifest.rs  native_smoke.rs  phase3.rs  process_smoke.rs  schema_stub.rs  trust.rs  wasm_smoke.rs
crates/piperine-pool/: Cargo.toml
crates/piperine-pool/src/: engine.rs  ipc.rs  lib.rs  pool.rs
crates/piperine-python/: Cargo.toml  README.md
crates/piperine-python/src/: design.rs  embed.rs  instance.rs  lib.rs  live.rs  module.rs  results.rs  value_bridge.rs
crates/piperine-python/tests/: disto_parity.rs  embed.rs  facade_hygiene.rs  four_parity.rs  live_facade.rs  live_optimize_example.rs  live_session.rs  pz_parity.rs  sens_parity.rs  smoke.rs  sp_parity.rs
crates/piperine-solver/: Cargo.toml  build.rs
crates/piperine-solver/docs/: SPEC.md
crates/piperine-solver/src/: abi.rs  analog.rs  circuit.rs  device.rs  digital.rs  error.rs  lib.rs  port.rs  prelude.rs  result.rs  topology.rs  util.rs
crates/piperine-solver/tests/: abi_surface.rs  capabilities_contract.rs  composed_element.rs  (+13 more)
ngspice-46+ds/doc/: .gitattributes  .gitignore  AUTHORS  Bug-LyX.txt  COPYING  INSTALL  Makefile.am  NEWS  README  compile_dist.sh  configure-nocheck.ac  configure.ac  manual.lyx
(+1904 files in other folders)
