[workspace]
members = [
    "crates/piperine-cli",
    "crates/piperine-codegen",
    "crates/piperine-lang",
    "crates/piperine-project",
    "crates/piperine-lang-server",
    "crates/piperine-solver",
]
exclude = [
    "crates/piperine-ams",
]

[workspace.package]
version = "0.1.1"
edition = "2024"

[package]
name = "piperine"
version.workspace = true
edition.workspace = true

[dependencies]
dirs = "5.0"
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
piperine-cli = { version = "0.1.1", path = "crates/piperine-cli" }
piperine-project = { version = "0.1.1", path = "crates/piperine-project" }

[dev-dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
bindgen = "0.72.1"

[profile.dev.package.faer]
opt-level = 3

[profile.release]
debug = true
opt-level = 3
lto = "fat"
codegen-units = 1


[workspace.dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "2.0"
num-complex = "0.4"
num-traits = "0.2"
faer = { version = "0.23.2", features = ["sparse", "std", "sparse-linalg"] }
ndarray = { version = "0.17.1", features = ["rayon"] }
bimap = "0.6.3"
rayon = "1.11.0"
rand_distr = "0.5.1"
paste = "1.0.15"
libloading = "0.8"
tempfile = "3"
ipc-channel = "0.22"
