[workspace]
members = [
    "crates/piperine-bench",
    "crates/piperine-cli",
    "crates/piperine-codegen",
    "crates/piperine-lang",
    "crates/piperine-project",
    "crates/piperine-lang-server",
    "crates/piperine-solver",
    "crates/piperine-plugin",
    "crates/piperine-plugin-wasm",
    "crates/piperine-python",
]

[workspace.package]
version = "0.1.1"
edition = "2024"

[package]
name = "piperine"
version.workspace = true
edition.workspace = true

[dependencies]
dirs = "5.0"
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
piperine-cli = { version = "0.1.1", path = "crates/piperine-cli" }
piperine-project = { version = "0.1.1", path = "crates/piperine-project" }

[dev-dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
bindgen = "0.72.1"

[profile.dev.package.faer]
opt-level = 3

[profile.release]
debug = true
opt-level = 3
lto = "fat"
codegen-units = 1


[workspace.dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "2.0"
num-complex = "0.4"
num-traits = "0.2"
faer = { version = "0.23.2", features = ["sparse", "std", "sparse-linalg"] }
ndarray = { version = "0.17.1", features = ["rayon"] }
bimap = "0.6.3"
rayon = "1.11.0"
rand_distr = "0.5.1"
paste = "1.0.15"
libloading = "0.8"
tempfile = "3"

[workspace.lints.clippy]
# ── Deny: mechanical, no reason to ignore ──
collapsible_if                  = "deny"
doc_overindented_list_items     = "deny"
excessive_precision             = "deny"
io_other_error                  = "deny"
manual_div_ceil                 = "deny"
manual_is_multiple_of           = "deny"
needless_borrow                 = "deny"
needless_range_loop             = "deny"
ptr_arg                         = "deny"
redundant_closure               = "deny"
slow_vector_initialization      = "deny"
unnecessary_cast                = "deny"
unnecessary_map_or              = "deny"
# ── Warn ──
question_mark                   = "warn"
# ── Allow ──
module_inception                = "allow"
new_without_default             = "allow"
too_many_arguments              = "allow"
type_complexity                 = "allow"
large_enum_variant              = "allow"
mutable_key_type                = "allow"
