[package]
name = "piperine-cli"
version.workspace = true
edition.workspace = true

# The `piperine` binary lives here (MD-19): the root crate is lib-only — the
# CLI depends on piperine-python (embedded CPython for `piperine run`), which
# depends on the root lib, so a root bin would close a package cycle.
[[bin]]
name = "piperine"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
    piperine-lang = { version = "0.1.0", path = "../piperine-lang" }
piperine-codegen = { version = "0.1.0", path = "../piperine-codegen" }
piperine-project = { version = "0.1.0", path = "../piperine-project" }
piperine-plugin = { version = "0.1.1", path = "../piperine-plugin" }
piperine-python = { path = "../piperine-python" }
include_dir = "0.7.4"
thiserror.workspace = true
toml_edit = "0.25.12"
miette = "7.6.0"

[dev-dependencies]
tempfile.workspace = true
