[package]
name = "piperine-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
piperine-solver = { path = "../piperine-solver" }
piperine-lang = { path = "../piperine-lang" }
piperine-math = { path = "../piperine-math" }
thiserror = "2.0"
cranelift-codegen  = "0.113"
cranelift-frontend = "0.113"
cranelift-jit      = "0.113"
cranelift-module   = "0.113"
num-complex.workspace = true

[dev-dependencies]
tempfile.workspace = true
