[package]
name = "piperine-lang-server"
version = "0.1.0"
edition = "2024"
description = "LSP language server for PHDL (Piperine Hardware Description Language)"

[[bin]]
name = "piperine-lang-server"
path = "src/main.rs"

[dependencies]
lsp-server = "0.8"
lsp-types = "0.97"
serde = { workspace = true }
serde_json = "1.0"
crossbeam-channel = "0.5"
piperine-lang = { path = "../piperine-lang" }
piperine-project = { path = "../piperine-project" }
