[package]
name = "piperine-ngspice"
version.workspace = true
edition.workspace = true

[dependencies]
piperine-core = { path = "../piperine-core" }
libc = "0.2"
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
bindgen = "0.72"
