[package]
name = "piperine-ngspice"
version.workspace = true
edition.workspace = true

[dependencies]
piperine-interpreter = { path = "../piperine-interpreter" }
piperine-circuit     = { path = "../piperine-circuit" }
piperine-coordinator = { path = "../piperine-coordinator" }
piperine-common      = { path = "../piperine-common" }
thiserror            = { workspace = true }
