[package]
name = "piperine-plugin-fixture"
version.workspace = true
edition.workspace = true
description = "Test fixture plugin: an analog resistor + a digital inverter through the native ABI"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
piperine-plugin = { path = "../piperine-plugin" }
piperine-solver = { version = "0.1.0", path = "../piperine-solver" }
