[package]
name = "piperine-plugin"
version.workspace = true
edition.workspace = true
description = "Piperine plugin SDK + host: manifest, TOFU trust, native backend, device factories"

[dependencies]
piperine-lang = { version = "0.1.0", path = "../piperine-lang" }
piperine-codegen = { version = "0.1.0", path = "../piperine-codegen" }
piperine-solver = { version = "0.1.0", path = "../piperine-solver" }
piperine-project = { version = "0.1.0", path = "../piperine-project" }
piperine-bench = { version = "0.1.1", path = "../piperine-bench" }
thiserror.workspace = true
miette = { version = "7", features = ["fancy"] }
serde.workspace = true
toml = "1.1.2"
sha2 = "0.10"
libloading.workspace = true
serde_json = "1"
wasmtime = { version = "46", default-features = false, features = ["runtime", "cranelift"] }

[dev-dependencies]
tempfile.workspace = true

# The fixture plugin (an analog resistor + a digital inverter) lives as an
# example: `cargo build --example fixture_plugin` produces the cdylib the
# native smoke test dlopens; the e2e tests compile the same source in-process
# via `#[path]`.
[[example]]
name = "fixture_plugin"
crate-type = ["cdylib", "rlib"]

# The process-tier gate guest (rc-parasitics served over stdio JSON-RPC via
# piperine_lang::pom::wire::serve_stdio): `cargo build --example
# process_parasitics` produces the executable the process backend spawns.
[[example]]
name = "process_parasitics"
