[package]
name = "piperine-pool"
version.workspace = true
edition.workspace = true

[dependencies]
piperine-core = { path = "../piperine-core" }
piperine-ngspice = { path = "../piperine-ngspice" }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
num_cpus = "1.16"
