[package]
name = "piperine-pool"
version.workspace = true
edition.workspace = true

[dependencies]
piperine-api = { path = "../piperine-api" }
piperine-ngspice = { path = "../piperine-ngspice" }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
num_cpus = "1.16"
