[package]
name = "piperine-python"
version.workspace = true
edition.workspace = true

[dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }
numpy = "0.23"
num-complex.workspace = true
piperine-lang = { path = "../piperine-lang" }
piperine-bench = { path = "../piperine-bench" }
piperine-project = { path = "../piperine-project" }

[lib]
# `cdylib` → the importable `_piperine.so` (maturin wheel enables the
# `extension-module` feature for that build); `rlib` → linked into the CLI's
# embedded interpreter (`piperine run script.py`). The default build (tests,
# CLI) keeps `extension-module` OFF so PyO3 links libpython normally and the
# crate can embed an interpreter.
crate-type = ["cdylib", "rlib"]

[features]
default = []
# ON only for the maturin wheel build; OFF for tests + the CLI's embedded path.
extension-module = ["pyo3/extension-module"]
