[package]
name = "piperine-solver"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
num-complex.workspace = true
num-traits.workspace = true
faer.workspace = true
rand_distr.workspace = true
ndarray.workspace = true
bimap.workspace = true
log = "0.4"
rayon.workspace = true
bitflags = "2.6"
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
